syntax = "proto3";
option java_multiple_files = false;
option java_package = "com.temperature";
option java_outer_classname = "HelloTemperatureProto";

message TemperatureRequest{
  string tempCall = 1;
}

message TemperatureResponse{
  string homeArea = 1;
  double degreeCelsius = 2;
}

message TempHealthCheckRequest {
  string serviceName = 1;
  string serviceVersion = 2;
  int64 timestamp = 3;
}

message TempHealthCheckResponse {
  int32 status = 1;
  string message = 2;
}

service HelloTemperature{
  rpc temperatureService(TemperatureRequest)  returns ( stream TemperatureResponse);
  // Server-side streaming RPC for health check
  rpc HealthCheck(TempHealthCheckRequest) returns (stream TempHealthCheckResponse);
}